--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "react-share": "^5.1.0",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
